refactor(runtime): apply Java 25 adapter conventions